(feat):data - Remove points, as it was leakage

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 29,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 30,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 31,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -122,12 +122,12 @@
    "id": "14e22ebd",
    "metadata": {},
    "source": [
-    "We decide to remove the first 5 since they are leakage columns, meaning they will give our prediction away too easily."
+    "We decide to remove the first 7 since they are leakage columns, meaning they will give our prediction away too easily."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 32,
    "id": "ecbf502d",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columncount:   26\n"
+      "Columncount:   24\n"
      ]
     }
    ],
@@ -146,6 +146,8 @@
     "    \"fastestLap\",\n",
     "    \"fastestLapTime\",\n",
     "    \"rank\",\n",
+    "    \"laps\",\n",
+    "    \"points\"\n",
     "  \n",
     "]\n",
     "\n",
@@ -159,12 +161,12 @@
    "id": "501ca4eb",
    "metadata": {},
    "source": [
-    "Now our dataset consists of 26 columns. We need to remove \"target_finish\", as this is what we are trying to predict"
+    "Now our dataset consists of 24 columns. We need to remove \"target_finish\", as this is what we are trying to predict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 33,
    "id": "272bd475",
    "metadata": {},
    "outputs": [
@@ -172,19 +174,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columncount:   25\n"
+      "Columncount:   23\n"
      ]
     }
    ],
    "source": [
-    "#Remove target_finish, leading to 25 remaining columns\n",
+    "#Remove target_finish, leading to 23 remaining columns\n",
     "data = data.drop(\"target_finish\", axis = 1)\n",
     "print(\"Columncount:  \", len(data.columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 34,
    "id": "5fd52f2f",
    "metadata": {},
    "outputs": [
@@ -192,14 +194,13 @@
      "data": {
       "text/plain": [
        "Index(['resultId', 'raceId', 'year', 'round', 'grid', 'positionOrder',\n",
-       "       'points', 'laps', 'driverRef', 'surname', 'forename', 'dob',\n",
-       "       'nationality_x', 'constructorRef', 'name', 'nationality_y',\n",
-       "       'circuitRef', 'circuitId', 'name_y', 'location', 'country', 'lat',\n",
-       "       'lng', 'alt', 'date'],\n",
+       "       'driverRef', 'surname', 'forename', 'dob', 'nationality_x',\n",
+       "       'constructorRef', 'name', 'nationality_y', 'circuitRef', 'circuitId',\n",
+       "       'name_y', 'location', 'country', 'lat', 'lng', 'alt', 'date'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +222,7 @@
    "id": "1bcd79d1",
    "metadata": {},
    "source": [
-    "✅ Column decisions \n",
+    "Column decisions \n",
     "\n",
     "- resultId: **DROP**  – Unique ID, no predictive value\n",
     "\n",
@@ -259,11 +260,7 @@
     "\n",
     "- grid: **KEEP** – Starting position affects crash risk\n",
     "\n",
-    "- points: **KEEP** – Reflects skill/performance level\n",
-    "\n",
     "- positionOrder: **DROP** – Leakage (reveals final result)\n",
-    "\n",
-    "- laps: **DROP** – Leakage, low laps = DNF\n",
     "\n",
     "**Circuit info**\n",
     "\n",
@@ -284,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 35,
    "id": "dcdeaa74",
    "metadata": {},
    "outputs": [
@@ -292,8 +289,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns kept: ['year', 'round', 'grid', 'points', 'driverRef', 'constructorRef', 'circuitRef', 'country', 'alt', 'date']\n",
-      "New shape: (10000, 10)\n"
+      "Columns kept: ['year', 'round', 'grid', 'driverRef', 'constructorRef', 'circuitRef', 'country', 'alt', 'date']\n",
+      "New shape: (10000, 9)\n"
      ]
     }
    ],
@@ -316,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 36,
    "id": "7072022f",
    "metadata": {},
    "outputs": [
@@ -324,54 +321,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "points            971\n",
-      "year                0\n",
-      "round               0\n",
-      "grid                0\n",
-      "driverRef           0\n",
-      "constructorRef      0\n",
-      "circuitRef          0\n",
-      "country             0\n",
-      "alt                 0\n",
-      "date                0\n",
+      "year              0\n",
+      "round             0\n",
+      "grid              0\n",
+      "driverRef         0\n",
+      "constructorRef    0\n",
+      "circuitRef        0\n",
+      "country           0\n",
+      "alt               0\n",
+      "date              0\n",
       "dtype: int64\n",
-      "Columncount:   10\n"
+      "Columncount:   9\n"
      ]
     }
    ],
    "source": [
-    "# Count columns that contains either NaN, '\\N' eller 'NULL'\n",
+    "# Count columns that contains either NaN, '\\N' or 'NULL'\n",
     "null_counts = (data.isna() | data.eq('\\\\N') | data.eq('NULL')).sum()\n",
     "\n",
     "print(null_counts.sort_values(ascending=False))\n",
     "print(\"Columncount:  \",len(data.columns))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6dcde2e",
-   "metadata": {},
-   "source": [
-    "Let us remove the rows that does not have points."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 365,
-   "id": "59e111c3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New shape:  (9029, 10)\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = data.dropna(subset=['points'])\n",
-    "print(\"New shape: \", data.shape)"
    ]
   },
   {
@@ -384,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 38,
    "id": "b5ff629f",
    "metadata": {},
    "outputs": [
@@ -403,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 39,
    "id": "27cb1bf0",
    "metadata": {},
    "outputs": [
@@ -411,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "driverRef          663\n",
-      "constructorRef     173\n",
+      "driverRef          677\n",
+      "constructorRef     174\n",
       "circuitRef          77\n",
       "country             35\n",
       "date              1125\n",
@@ -444,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 40,
    "id": "1a3fee58",
    "metadata": {},
    "outputs": [
@@ -452,10 +421,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['year', 'round', 'grid', 'points', 'driverRef', 'constructorRef',\n",
-      "       'circuitRef', 'country', 'alt', 'month', 'day'],\n",
+      "Index(['year', 'round', 'grid', 'driverRef', 'constructorRef', 'circuitRef',\n",
+      "       'country', 'alt', 'month', 'day'],\n",
       "      dtype='object')\n",
-      "New shape:  (9029, 11)\n"
+      "New shape:  (10000, 10)\n"
      ]
     }
    ],
@@ -482,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 41,
    "id": "c5aa39de",
    "metadata": {},
    "outputs": [
@@ -493,6 +462,171 @@
       "Categorical columns: Index(['driverRef', 'constructorRef', 'circuitRef', 'country'], dtype='object')\n"
      ]
     },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>grid</th>\n",
+       "      <th>driverRef</th>\n",
+       "      <th>constructorRef</th>\n",
+       "      <th>circuitRef</th>\n",
+       "      <th>country</th>\n",
+       "      <th>alt</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0144</td>\n",
+       "      <td>0.0728</td>\n",
+       "      <td>0.0362</td>\n",
+       "      <td>0.0362</td>\n",
+       "      <td>264</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1981</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.0064</td>\n",
+       "      <td>0.0728</td>\n",
+       "      <td>0.0090</td>\n",
+       "      <td>0.0787</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1958</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>0.0170</td>\n",
+       "      <td>0.0356</td>\n",
+       "      <td>0.0716</td>\n",
+       "      <td>578</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.0015</td>\n",
+       "      <td>0.0151</td>\n",
+       "      <td>0.0330</td>\n",
+       "      <td>0.0335</td>\n",
+       "      <td>678</td>\n",
+       "      <td>6</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0039</td>\n",
+       "      <td>0.0041</td>\n",
+       "      <td>0.0678</td>\n",
+       "      <td>0.0977</td>\n",
+       "      <td>162</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  round  grid  driverRef  constructorRef  circuitRef  country  alt  \\\n",
+       "0  2002     13    11     0.0144          0.0728      0.0362   0.0362  264   \n",
+       "1  1981      1    23     0.0064          0.0728      0.0090   0.0787   12   \n",
+       "2  1958      8     0     0.0005          0.0170      0.0356   0.0716  578   \n",
+       "3  2021      8    19     0.0015          0.0151      0.0330   0.0335  678   \n",
+       "4  1988     12     0     0.0039          0.0041      0.0678   0.0977  162   \n",
+       "\n",
+       "   month  day  \n",
+       "0      8   18  \n",
+       "1      3   15  \n",
+       "2      8    3  \n",
+       "3      6   27  \n",
+       "4      9   11  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find all categorial columns (object)\n",
+    "cat_cols = data.select_dtypes(include=['object']).columns\n",
+    "print(\"Categorical columns:\", cat_cols)\n",
+    "\n",
+    "# Frequency encode each column\n",
+    "for col in cat_cols:\n",
+    "    freq = data[col].value_counts(normalize=True)   # normalized frequency\n",
+    "    data[col] = data[col].map(freq)\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a13754d",
+   "metadata": {},
+   "source": [
+    "LETS GO! Our dataset is finished and we can now move onto part 2, training our models!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "724f19fb",
+   "metadata": {},
+   "source": [
+    "## Part 2 - Training models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721e3fe6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "id": "06a305f0",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -598,65 +732,133 @@
        "      <td>9</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>8</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.002547</td>\n",
+       "      <td>0.022594</td>\n",
+       "      <td>0.052941</td>\n",
+       "      <td>0.073873</td>\n",
+       "      <td>153</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.005205</td>\n",
+       "      <td>0.025473</td>\n",
+       "      <td>0.037324</td>\n",
+       "      <td>0.037324</td>\n",
+       "      <td>264</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>13</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.004098</td>\n",
+       "      <td>0.033337</td>\n",
+       "      <td>0.068668</td>\n",
+       "      <td>0.099568</td>\n",
+       "      <td>162</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.007753</td>\n",
+       "      <td>0.031233</td>\n",
+       "      <td>0.013291</td>\n",
+       "      <td>0.013291</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>1975</td>\n",
+       "      <td>7</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000111</td>\n",
+       "      <td>0.003655</td>\n",
+       "      <td>0.004873</td>\n",
+       "      <td>0.004873</td>\n",
+       "      <td>153</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year  round  grid  points  driverRef  constructorRef  circuitRef   country  \\\n",
-       "0  2002     13    11     3.0   0.014730        0.072987    0.037324  0.037324   \n",
-       "1  1981      1    23     0.0   0.006313        0.072987    0.009414  0.079189   \n",
-       "2  1958      8     0     0.0   0.000332        0.016281    0.035884  0.072323   \n",
-       "3  2021      8    19     0.0   0.001551        0.014952    0.033448  0.034002   \n",
-       "4  1988     12     0     0.0   0.003987        0.004098    0.068668  0.099568   \n",
+       "     year  round  grid  points  driverRef  constructorRef  circuitRef  \\\n",
+       "0    2002     13    11     3.0   0.014730        0.072987    0.037324   \n",
+       "1    1981      1    23     0.0   0.006313        0.072987    0.009414   \n",
+       "2    1958      8     0     0.0   0.000332        0.016281    0.035884   \n",
+       "3    2021      8    19     0.0   0.001551        0.014952    0.033448   \n",
+       "4    1988     12     0     0.0   0.003987        0.004098    0.068668   \n",
+       "..    ...    ...   ...     ...        ...             ...         ...   \n",
+       "103  1991      8    20     0.0   0.002547        0.022594    0.052941   \n",
+       "104  1994     10     9     1.0   0.005205        0.025473    0.037324   \n",
+       "105  1974     13     7     9.0   0.004098        0.033337    0.068668   \n",
+       "106  2009     17     3     8.0   0.007753        0.031233    0.013291   \n",
+       "107  1975      7    21     0.0   0.000111        0.003655    0.004873   \n",
        "\n",
-       "   alt  month  day  \n",
-       "0  264      8   18  \n",
-       "1   12      3   15  \n",
-       "2  578      8    3  \n",
-       "3  678      6   27  \n",
-       "4  162      9   11  "
+       "      country  alt  month  day  \n",
+       "0    0.037324  264      8   18  \n",
+       "1    0.079189   12      3   15  \n",
+       "2    0.072323  578      8    3  \n",
+       "3    0.034002  678      6   27  \n",
+       "4    0.099568  162      9   11  \n",
+       "..        ...  ...    ...  ...  \n",
+       "103  0.073873  153      7   14  \n",
+       "104  0.037324  264      8   14  \n",
+       "105  0.099568  162      9    8  \n",
+       "106  0.013291    3     11    1  \n",
+       "107  0.004873  153      6    8  \n",
+       "\n",
+       "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Finn alle kategoriske kolonner (object)\n",
-    "cat_cols = data.select_dtypes(include=['object']).columns\n",
-    "print(\"Categorical columns:\", cat_cols)\n",
-    "\n",
-    "# Frequency encode each column\n",
-    "for col in cat_cols:\n",
-    "    freq = data[col].value_counts(normalize=True)   # normalized frequency\n",
-    "    data[col] = data[col].map(freq)\n",
-    "\n",
-    "data.head()"
+    "data.head(100)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a13754d",
-   "metadata": {},
-   "source": [
-    "LETS GO! Our dataset is finished and we can now move onto part 2, training our models!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "724f19fb",
-   "metadata": {},
-   "source": [
-    "## Part 2 - Loading and maipulating data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "721e3fe6",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
