Branched off to test other feature selection

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -14,8 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbbaecbf",
+   "metadata": {},
+   "source": [
+    "### Loading data and prining out head & shape ###"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -23,42 +31,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   resultId  raceId  year  round  grid  positionOrder  points  laps  \\\n",
-      "0      2460     136  2002     13    11              4     3.0  77.0   \n",
-      "1     11565     483  1981      1    23             21     0.0  16.0   \n",
-      "2     18661     772  1958      8     0             26     0.0   0.0   \n",
-      "3     25121    1058  2021      8    19             16     0.0  69.0   \n",
-      "4      8863     383  1988     12     0             30     0.0   0.0   \n",
-      "\n",
-      "  milliseconds fastestLap  ...     circuitRef circuitId        name_y  \\\n",
-      "0          NaN         \\N  ...    hungaroring        11       McLaren   \n",
-      "1           \\N         \\N  ...     long_beach        43       McLaren   \n",
-      "2           \\N         \\N  ...    nurburgring        20      Maserati   \n",
-      "3           \\N         57  ...  red_bull_ring        70  Haas F1 Team   \n",
-      "4           \\N         \\N  ...          monza        14     Euro Brun   \n",
-      "\n",
-      "     location  country      lat        lng  alt        date target_finish  \n",
-      "0    Budapest  Hungary  47.5789   19.24860  264  2002-08-18             1  \n",
-      "1  California      USA  33.7651 -118.18900   12  1981-03-15             0  \n",
-      "2     Nürburg  Germany  50.3356    6.94750  578  1958-08-03             0  \n",
-      "3   Spielberg  Austria  47.2197   14.76470  678  2021-06-27             0  \n",
-      "4       Monza    Italy  45.6156    9.28111  162  1988-09-11             0  \n",
-      "\n",
-      "[5 rows x 31 columns]\n",
-      "(10000, 31)\n"
+      "   resultId  raceId  year  round  grid  positionOrder  points  laps milliseconds fastestLap rank fastestLapTime fastestLapSpeed        driverRef     surname forename         dob nationality_x constructorRef                           name nationality_y     circuitRef  circuitId        name_y        location    country      lat        lng  alt        date  target_finish\n",
+      "0      2460     136  2002     13    11              4     3.0  77.0          NaN         \\N   \\N             \\N              \\N        raikkonen   Räikkönen     Kimi  1979-10-17       Finnish        mclaren                    Hungaroring       British    hungaroring         11       McLaren        Budapest    Hungary  47.5789   19.24860  264  2002-08-18              1\n",
+      "1     11565     483  1981      1    23             21     0.0  16.0           \\N         \\N   \\N             \\N              \\N           watson      Watson     John  1946-05-04       British        mclaren                     Long Beach       British     long_beach         43       McLaren      California        USA  33.7651 -118.18900   12  1981-03-15              0\n",
+      "2     18661     772  1958      8     0             26     0.0   0.0           \\N         \\N   \\N             \\N              \\N          ruttman     Ruttman     Troy  1930-03-11      American       maserati                    Nürburgring       Italian    nurburgring         20      Maserati         Nürburg    Germany  50.3356    6.94750  578  1958-08-03              0\n",
+      "3     25121    1058  2021      8    19             16     0.0  69.0           \\N         57   16       1:10.005         222.052  mick_schumacher  Schumacher     Mick  1999-03-22        German           haas                  Red Bull Ring      American  red_bull_ring         70  Haas F1 Team       Spielberg    Austria  47.2197   14.76470  678  2021-06-27              0\n",
+      "4      8863     383  1988     12     0             30     0.0   0.0           \\N         \\N   \\N             \\N              \\N           modena      Modena  Stefano  1963-05-12       Italian       eurobrun   Autodromo Nazionale di Monza       Italian          monza         14     Euro Brun           Monza      Italy  45.6156    9.28111  162  1988-09-11              0\n",
+      "5     24317    1015  2019      6     5             14     0.0  77.0           \\N         61   17       1:16.992         156.031  kevin_magnussen   Magnussen    Kevin  1992-10-05        Danish           haas              Circuit de Monaco      American         monaco          6  Haas F1 Team     Monte-Carlo     Monaco  43.7347    7.42056    7  2019-05-26              0\n",
+      "6     14518     589  1975     14     5             18     NaN   9.0           \\N         \\N   \\N             \\N              \\N   mario_andretti    Andretti    Mario  1940-02-28      American       parnelli                   Watkins Glen      American   watkins_glen         46      Parnelli  New York State        USA  42.3369  -76.92720  485  1975-10-05              0\n",
+      "7     21966     892  2013     12    16             13     NaN  53.0      4754232         53    9       1:27.092         239.457        gutierrez   Gutiérrez  Esteban  1991-08-05       Mexican         sauber   Autodromo Nazionale di Monza         Swiss          monza         14        Sauber           Monza      Italy  45.6156    9.28111  162  2013-09-08              1\n",
+      "8     22656     932  2015      7     1              1    25.0  70.0      5513145         64    3       1:17.472         202.648         hamilton    Hamilton    Lewis  1985-01-07       British       mercedes      Circuit Gilles Villeneuve        German     villeneuve          7      Mercedes        Montreal     Canada  45.5000  -73.52280   13  2015-06-07              1\n",
+      "9     18072     746  1960      1     2              6     1.0  79.0           \\N         \\N   \\N             \\N              \\N          ireland     Ireland    Innes  1930-06-12       British     team_lotus  Autódromo Juan y Oscar Gálvez       British         galvez         25    Team Lotus    Buenos Aires  Argentina -34.6943  -58.45930    8  1960-02-07              0\n",
+      "Shape:  (10000, 31)\n"
      ]
     }
    ],
    "source": [
     "#Importing data to dataframe\n",
-    "data = pd.read_csv('data.csv')\n",
-    "print(data.head())\n",
-    "print(data.shape)"
+    "raw_data = pd.read_csv('data.csv')\n",
+    "print(raw_data.head(10).to_string())\n",
+    "print(\"Shape: \", raw_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e084133",
+   "metadata": {},
+   "source": [
+    "### Print overview of columns containing NA values, and dropping using 90% threshold ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -66,61 +71,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resultId              0\n",
-      "raceId                0\n",
-      "year                  0\n",
-      "round                 0\n",
-      "grid                  0\n",
-      "positionOrder         0\n",
+      "Rows with NA and NA count: \n",
       "points              971\n",
       "laps                978\n",
-      "milliseconds       1018\n",
-      "fastestLap            0\n",
-      "rank                  0\n",
-      "fastestLapTime        0\n",
-      "fastestLapSpeed     953\n",
-      "driverRef             0\n",
-      "surname               0\n",
-      "forename              0\n",
-      "dob                   0\n",
-      "nationality_x         0\n",
-      "constructorRef        0\n",
-      "name                  0\n",
-      "nationality_y         0\n",
-      "circuitRef            0\n",
-      "circuitId             0\n",
-      "name_y                0\n",
-      "location              0\n",
-      "country               0\n",
-      "lat                   0\n",
-      "lng                   0\n",
-      "alt                   0\n",
-      "date                  0\n",
-      "target_finish         0\n",
+      "milliseconds       7393\n",
+      "fastestLap         6895\n",
+      "rank               6798\n",
+      "fastestLapTime     6895\n",
+      "fastestLapSpeed    7191\n",
       "dtype: int64\n",
-      "9000\n"
+      "\n",
+      "Shape with 90% threshold for dropping column:\n",
+      "(10000, 26)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 30)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Finding number of null values per column, dropping those with more than 10% missing  \n",
-    "nullValues = data.isnull().sum()\n",
-    "print(nullValues)\n",
-    "thresh = round(0.9*data.shape[0])\n",
-    "print(thresh)\n",
-    "data1 = data.dropna(axis=1, thresh=thresh)\n",
-    "data1.isnull().sum()\n",
-    "data1.shape"
+    "# Make sure other types of missing data is also registered as missing data\n",
+    "missing_markers = ['\\\\N', 'NULL', 'null', ''] \n",
+    "raw_data = raw_data.replace(missing_markers, np.nan)\n",
+    "\n",
+    "nullValues = raw_data.isnull().sum()\n",
+    "print(\"Rows with NA and NA count: \")\n",
+    "print(nullValues[nullValues > 0])\n",
+    "print(\"\\nShape with 90% threshold for dropping column:\")\n",
+    "thresh = round(0.9*raw_data.shape[0])\n",
+    "trimmed_raw_data = raw_data.dropna(axis=1, thresh=thresh)\n",
+    "print(trimmed_raw_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c08499e",
+   "metadata": {},
+   "source": [
+    "### Dropping rows with NA values ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1fd36e5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape after dropping rows with NA values and columns with >90% NA values:\n",
+      " (8155, 26)\n"
+     ]
+    }
+   ],
+   "source": [
+    "trimmed_raw_data = trimmed_raw_data.dropna()\n",
+    "print(\"Shape after dropping rows with NA values and columns with >90% NA values:\\n\",trimmed_raw_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d66ef68",
+   "metadata": {},
+   "source": [
+    "### Printing out describtion of dataframe, and ranked correlation between numerical features for analysis ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "13904c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           resultId       raceId         year        round         grid  positionOrder       points         laps    circuitId          lat          lng          alt  target_finish\n",
+      "count   8155.000000  8155.000000  8155.000000  8155.000000  8155.000000    8155.000000  8155.000000  8155.000000  8155.000000  8155.000000  8155.000000  8155.000000    8155.000000\n",
+      "mean   13441.308032   554.213857  1991.561496     8.557940    11.199142      12.701288     2.010072    46.764562    23.894298    34.221987     4.866133   283.150092       0.287676\n",
+      "std     7758.834745   314.591211    20.045827     5.063339     7.248409       7.595927     4.429293    29.781355    19.163225    25.026052    57.453667   416.136823       0.452707\n",
+      "min        9.000000     1.000000  1950.000000     1.000000     0.000000       1.000000     0.000000     0.000000     1.000000   -37.849700  -118.189000    -7.000000       0.000000\n",
+      "25%     6633.500000   300.000000  1977.000000     4.000000     5.000000       6.000000     0.000000    24.000000     9.000000    34.843100    -1.016940    18.000000       0.000000\n",
+      "50%    13408.000000   532.000000  1992.000000     8.000000    11.000000      12.000000     0.000000    53.000000    18.000000    44.048100     6.947500   153.000000       0.000000\n",
+      "75%    20185.500000   817.500000  2009.000000    12.000000    17.000000      18.000000     2.000000    67.000000    34.000000    49.254200    14.764700   401.000000       1.000000\n",
+      "max    26761.000000  1144.000000  2024.000000    24.000000    34.000000      39.000000    30.000000   200.000000    80.000000    57.265300   144.968000  2227.000000       1.000000\n",
+      "\n",
+      "Correlation between numerical features and target_finish ranked on abs value\n",
+      "points           0.630361\n",
+      "positionOrder   -0.628766\n",
+      "grid            -0.338690\n",
+      "laps             0.336987\n",
+      "year             0.278198\n",
+      "resultId         0.149371\n",
+      "raceId           0.134022\n",
+      "round            0.127768\n",
+      "lng              0.088980\n",
+      "alt             -0.042400\n",
+      "lat             -0.021181\n",
+      "circuitId       -0.019169\n",
+      "Name: target_finish, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(trimmed_raw_data.describe().to_string())\n",
+    "print(\"\\nCorrelation between numerical features and target_finish ranked on abs value\")\n",
+    "print(trimmed_raw_data.corr(numeric_only=True)['target_finish'].sort_values(key=abs, ascending=False)[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f88172",
+   "metadata": {},
+   "source": [
+    "### Futher feature selection ###"
    ]
   },
   {
@@ -128,69 +192,30 @@
    "id": "74cba889",
    "metadata": {},
    "source": [
-    "Some columns have leakage features, meaning they have a 1-1 correlation with what we try to predict.\n",
-    "These need to be removed as they will make the predictions too easy\n",
-    "We also need to decide which of the non-numerical columns to discard even if they aren't leakage features. Simply because they have too diverse values relative to the amount of data.\n",
-    "As an example, the forename of the driver will be too sparse for the model to learn what drivers are reckless, and which aren't. "
+    "Some columns have leakage features, meaning they have a 1-1 correlation with what we try to predict.These need to be removed as they will make the predictions too \"easy\"\n",
+    "\n",
+    "Some of these are also measurements made after after the target value is measured, and therefore don't have any predictive power. E.g. \"positionOrder\" and \"points\", which are based upon whether the driver finishes the race or not.\n",
+    "\n",
+    "We also need to decide which of the non-numerical columns to discard even if they aren't leakage features. Simply because they have too diverse values relative to the amount of data. As an example, the forename of the driver will be too sparse for the model to learn what drivers are reckless, and which aren't. \n",
+    "\n",
+    "Will also remove geographical features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1fd36e5f",
+   "execution_count": 46,
+   "id": "2d97a3b6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7399, 30)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Remove rows with null values, make sure this is done after we are done dropping columns\n",
-    "data2 = data1.dropna(axis=0, thresh=data1.shape[1])\n",
-    "data2.shape"
+    "f = [\"points\", \"resultId\", \"positionOrder\", \"lng\", \"lat\"]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "13904c1f",
+   "cell_type": "markdown",
+   "id": "93c46924",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "target_finish    1.000000\n",
-       "points           0.628731\n",
-       "laps             0.334690\n",
-       "year             0.290462\n",
-       "resultId         0.153426\n",
-       "raceId           0.139581\n",
-       "round            0.132131\n",
-       "lng              0.093242\n",
-       "circuitId       -0.018930\n",
-       "lat             -0.019015\n",
-       "alt             -0.042671\n",
-       "grid            -0.334981\n",
-       "positionOrder   -0.627143\n",
-       "Name: target_finish, dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data2.describe()\n",
-    "data2.corr(numeric_only=True)['target_finish'].sort_values(ascending=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
