Flipped target value such that dnf is the positive

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 220,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 235,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 236,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 237,
    "id": "a9ca9c4a",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 238,
    "id": "1fd36e5f",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 239,
    "id": "13904c1f",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 240,
    "id": "6b97271c",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 241,
    "id": "953ed0c6",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 242,
    "id": "76a0e7cf",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 243,
    "id": "4a92f2f2",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 244,
    "id": "63235928",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 245,
    "id": "f2c457a5",
    "metadata": {},
    "outputs": [
@@ -454,6 +454,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ba2c6dd",
+   "metadata": {},
+   "source": [
+    "## Flip values in target_finish ## \n",
+    "We want to detect DNF, make this our positive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "id": "8bb5caf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target_dnf\n",
+      "1    7105\n",
+      "0    2895\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoded_data['target_dnf'] = 1 - encoded_data['target_finish']\n",
+    "encoded_data.drop(columns=[\"target_finish\"])\n",
+    "print(encoded_data[\"target_dnf\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edb64f85",
    "metadata": {},
    "source": [
@@ -470,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 247,
    "id": "459378a9",
    "metadata": {},
    "outputs": [
@@ -478,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training size (X, y): (8550, 35) , 8550\n",
-      "Test size (X, y): (1450, 35) , 1450\n"
+      "Training size (X, y): (8550, 36) , 8550\n",
+      "Test size (X, y): (1450, 36) , 1450\n"
      ]
     }
    ],
