--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "a9ca9c4a",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "1fd36e5f",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "13904c1f",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "6b97271c",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "953ed0c6",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "76a0e7cf",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "4a92f2f2",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "63235928",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "f2c457a5",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "8bb5caf3",
    "metadata": {},
    "outputs": [
@@ -485,6 +485,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c4504f59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved processed_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save processed dataframe to a reusable CSV for other notebooks\n",
+    "encoded_data.to_csv(\"processed_data.csv\", index=False)\n",
+    "print(\"Saved processed_data.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "edb64f85",
    "metadata": {},
@@ -502,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "459378a9",
    "metadata": {},
    "outputs": [
@@ -533,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "47c6532d",
    "metadata": {},
    "outputs": [
@@ -867,7 +887,7 @@
        "6      0.0      0.0      0.0      0.0       1.0       0.0           1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "f25d1d4c",
    "metadata": {},
    "outputs": [
@@ -1649,7 +1669,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1663,7 +1683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
