--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 1,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 2,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 3,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 4,
    "id": "a9ca9c4a",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 5,
    "id": "1fd36e5f",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 6,
    "id": "13904c1f",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 7,
    "id": "6b97271c",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 8,
    "id": "953ed0c6",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 9,
    "id": "76a0e7cf",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 10,
    "id": "4a92f2f2",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 11,
    "id": "63235928",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 12,
    "id": "f2c457a5",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 13,
    "id": "8bb5caf3",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
    ],
    "source": [
     "encoded_data['target_dnf'] = 1 - encoded_data['target_finish']\n",
-    "encoded_data.drop(columns=[\"target_finish\"])\n",
+    "encoded_data = encoded_data.drop(columns=[\"target_finish\"])\n",
     "print(encoded_data[\"target_dnf\"].value_counts())"
    ]
   },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 14,
    "id": "459378a9",
    "metadata": {},
    "outputs": [
@@ -510,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training size (X, y): (8550, 36) , 8550\n",
-      "Test size (X, y): (1450, 36) , 1450\n"
+      "Training size (X, y): (8550, 35) , 8550\n",
+      "Test size (X, y): (1450, 35) , 1450\n"
      ]
     }
    ],
@@ -521,20 +521,167 @@
     "train_data = encoded_data[encoded_data['year'] <= cutoff_year].copy()\n",
     "test_data  = encoded_data[encoded_data['year'] >  cutoff_year].copy()\n",
     "\n",
-    "X_train = train_data.drop(columns=['target_finish'])\n",
-    "y_train = train_data['target_finish']\n",
+    "X_train = train_data.drop(columns=['target_dnf'])\n",
+    "y_train = train_data['target_dnf']\n",
     "\n",
-    "X_test  = test_data.drop(columns=['target_finish'])\n",
-    "y_test  = test_data['target_finish']\n",
+    "X_test  = test_data.drop(columns=['target_dnf'])\n",
+    "y_test  = test_data['target_dnf']\n",
     "\n",
     "print(\"Training size (X, y):\", X_train.shape, \",\", len(y_train))\n",
     "print(\"Test size (X, y):\", X_test.shape, \",\", len(y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e4537a",
+   "metadata": {},
+   "source": [
+    "Beginning of logistic regression\n",
+    "Starting with finding strong features using Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50818851",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "random_seed = 2334\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "\n",
+    "feature_extractor = LogisticRegression(penalty='l1', solver='liblinear', random_state=random_seed, C=1)\n",
+    "\n",
+    "feature_extractor.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "#Threshold 0.05, this gives 19 features with C=1\n",
+    "thresh = 0.05\n",
+    "\n",
+    "significant = X_train.columns[abs(feature_extractor.coef_[0])>thresh]\n",
+    "coefficients = feature_extractor.coef_[0][abs(feature_extractor.coef_[0])>thresh]\n",
+    "z = list(zip(significant, coefficients))\n",
+    "z.sort(key=lambda x: abs(x[1]), reverse=True)\n",
+    "significantSorted = [p[0] for p in z]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9f968d",
+   "metadata": {},
+   "source": [
+    "After Lasso has had its way with our features, we are left with 19\n",
+    "We will then test out different subsets of these in conjunction with changing the levels of regularization\n",
+    "To do this we will create a pipeline and use a Grid search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbfdbe28",
+   "metadata": {},
+   "source": [
+    "What happens in the following cell\n",
+    "1. We define a list of lists of features. These are selected based on the output of the previous cell, where lasso assigns higher coefficients to features with more predictive power. I try all, then only the significant ones, the 7 best, the best half, best quarter, worst half and then in the end constructors and circuits for fun (might remove these)\n",
+    "2. I define a parametergrid, currently the only parameter is C, which is the amount of lasso-regularization. \n",
+    "3. I iterate through the different subsets of features, and do gridsearch, with a cv of 5, for each one of them. \n",
+    "4. We save the best result of each feature-set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "26174217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['grid', 'year', 'constructorRef_ferrari', 'constructorRef_mclaren', 'constructorRef_williams', 'circuitRef_nurburgring', 'constructorRef_red_bull', 'circuitRef_monaco', 'constructorRef_ligier', 'month_10', 'constructorRef_renault', 'constructorRef_team_lotus', 'circuitRef_spa', 'circuitRef_interlagos', 'alt', 'constructorRef_tyrrell', 'month_3', 'circuitRef_silverstone', 'circuitRef_villeneuve']\n",
+      "**Feature_Set_1_(35 columns)**: Best Score = 0.8022, Best C = 0.0464\n",
+      "**Feature_Set_2_(19 columns)**: Best Score = 0.8016, Best C = 0.0464\n",
+      "**Feature_Set_3_(7 columns)**: Best Score = 0.8012, Best C = 0.0464\n",
+      "**Feature_Set_4_(9 columns)**: Best Score = 0.8006, Best C = 0.2154\n",
+      "**Feature_Set_5_(4 columns)**: Best Score = 0.7927, Best C = 0.0464\n",
+      "**Feature_Set_6_(9 columns)**: Best Score = 0.7523, Best C = 4.6416\n",
+      "**Feature_Set_constructors_(10 columns)**: Best Score = 0.7588, Best C = 0.0464\n",
+      "**Feature_Set_circuits_(10 columns)**: Best Score = 0.7520, Best C = 0.0100\n",
+      "0.752046783625731\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "print(significantSorted)\n",
+    "\n",
+    "#We try all the features, the best half and quarter, as well as the worst half for fun\n",
+    "listsOfFeatures = [\n",
+    "    X_train.columns,\n",
+    "    significantSorted,\n",
+    "    significantSorted[0:7],\n",
+    "    significantSorted[0:len(significantSorted)//2],\n",
+    "    significantSorted[0:len(significantSorted)//4],\n",
+    "    significantSorted[len(significantSorted)//2:-1],\n",
+    "    [s for s in X_train.columns if 'constructorRef' in s],\n",
+    "    [s for s in X_train.columns if 'circuitRef' in s],\n",
+    "]\n",
+    "\n",
+    "param_grid = {\n",
+    "    'model__C' : np.logspace(-2, 2, 7),\n",
+    "}\n",
+    "\n",
+    "\n",
+    "pipe = Pipeline([\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"model\", LogisticRegression(max_iter=1000, solver='liblinear', penalty='l1', random_state=random_seed))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for i, features in enumerate(listsOfFeatures):\n",
+    "    X_train_iter = X_train[features]\n",
+    "    grid = GridSearchCV(pipe, param_grid=param_grid, cv=5)\n",
+    "    if i == 6:\n",
+    "        key = f\"Feature_Set_constructors_({len(features)} columns)\"\n",
+    "    elif i == 7:\n",
+    "        key = f\"Feature_Set_circuits_({len(features)} columns)\"\n",
+    "    else:\n",
+    "        key = f\"Feature_Set_{i+1}_({len(features)} columns)\"\n",
+    "    grid.fit(X_train_iter, y_train)\n",
+    "\n",
+    "\n",
+    "    #Storing results\n",
+    "    results[key] = {\n",
+    "        'best_score': grid.best_score_,\n",
+    "        'best_params': grid.best_params_,\n",
+    "        'features_used': features\n",
+    "    }\n",
+    "\n",
+    "for key, res in results.items():\n",
+    "    print(f\"**{key}**: Best Score = {res['best_score']:.4f}, Best C = {res['best_params']['model__C']:.4f}\")\n",
+    "\n",
+    "print(sum(y_train)/len(y_train))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
